Going back to responsive desing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer proyecto</title>
+    <title>Tienda Muebles</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,10 +34,10 @@
 
     </div>
 
-    <section class="container">
+    <section class="container categories">
         <h2>Categoría de Productos</h2>
         
-        <div class="categories container">
+        <div class="list-categories container">
             <div class="category">
                 <img src="assets/categoria1.jpg" alt="Imagen Categoría 1">
                 <a href="#">Oficina</a>
