Responsive design About and blog

--- a/contact_us.html
+++ b/contact_us.html
@@ -100,38 +100,40 @@
         </form>
     </main>
     <footer>
-        <section class="footer container">
-            <div class="footer_grid">
-                <h3>Categorias</h3>
-                <nav>
-                    <a href="#">Cocina</a>
-                    <a href="#">Oficina</a>
-                    <a href="#">Jardín</a>
-                    <a href="#">Cochera</a>
-                    <a href="#">Dormitorios</a>
-                </nav>
-            </div>  
-            <div class="footer_grid">
-                <h3>Sobre Nosotros</h3>
-                <nav>
-                    <a href="#">Nuestra Historia</a>
-                    <a href="#">Misión, Visión y Valores</a>
-                    <a href="#">Carreras</a>
-                    <a href="#">Política de Privacidad</a>
-                    <a href="#">Términos y condiciones</a>
-                </nav>
+        <section class="footer">
+            <div class="footer_grid container">
+                <div>
+                    <h3>Categorias</h3>
+                    <nav>
+                        <a href="#">Cocina</a>
+                        <a href="#">Oficina</a>
+                        <a href="#">Jardín</a>
+                        <a href="#">Cochera</a>
+                        <a href="#">Dormitorios</a>
+                    </nav>
+                </div>  
+                <div>
+                    <h3>Sobre Nosotros</h3>
+                    <nav>
+                        <a href="#">Nuestra Historia</a>
+                        <a href="#">Misión, Visión y Valores</a>
+                        <a href="#">Carreras</a>
+                        <a href="#">Política de Privacidad</a>
+                        <a href="#">Términos y condiciones</a>
+                    </nav>
+                </div>
+                
+                <div>
+                    <h3>Soporte</h3>
+                    <nav>
+                        <a href="#">Preguntas Frecuentes</a>
+                        <a href="#">Ayuda en Línea</a>
+                        <a href="#">Confianza y Seguridad</a>
+                    </nav>
+                </div>
+                <p class="text_footer"> ©Tienda Muebles 2022, Todos los derechos reservados.</p>
             </div>
-            
-            <div class="footer_grid">
-                <h3>Soporte</h3>
-                <nav>
-                    <a href="#">Preguntas Frecuentes</a>
-                    <a href="#">Ayuda en Línea</a>
-                    <a href="#">Confianza y Seguridad</a>
-                </nav>
-            </div>
-            <p class="text_footer"> © Moebius Abogados 2020, Todos los derechos reservados.</p>
         </section>
-        </footer>
+    </footer>
 </body>
 </html>
